--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<json-lib.version>2.4</json-lib.version>
 		<jstl.version>1.2</jstl.version>
 		<log4j.version>1.2.16</log4j.version>
-		<mysql-connector-java.version>5.1.18</mysql-connector-java.version>
+		<oracle.version>11.1.0.7.0</oracle.version>
 		<poi.version>3.9</poi.version>
 		<quartz.version>2.2.0</quartz.version>
 		<spring.version>4.3.13.RELEASE</spring.version>
@@ -105,9 +105,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql-connector-java.version}</version>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>${oracle.version}</version>
 		</dependency>
 
 		<!-- POI -->
