--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<jstl.version>1.2</jstl.version>
 		<log4j.version>1.2.16</log4j.version>
 		<oracle.version>11.1.0.7.0</oracle.version>
+        <mysql-connector-java.version>5.1.18</mysql-connector-java.version>
 		<poi.version>3.9</poi.version>
 		<quartz.version>2.2.0</quartz.version>
 		<spring.version>4.3.13.RELEASE</spring.version>
@@ -109,6 +110,12 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>${oracle.version}</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
+        </dependency>
 
 		<!-- POI -->
 
